--- a/src/components/00-settings/_colors.scss
+++ b/src/components/00-settings/_colors.scss
@@ -1,9 +1,9 @@
 // Colors
 
-$regular-alpha: #00bfa5;
+$regular-alpha: #00a5ea;
 $regular-beta: darken($regular-alpha, 4%);
 
-$sapphire-care-blue1: #0e4f7c;
+$sapphire-care-blue1: #1b3a6a;
 
 $dark-blue: #194968;
 $dark-grey: #333333;
