--- a/src/components/03-elements/_links.scss
+++ b/src/components/03-elements/_links.scss
@@ -97,6 +97,7 @@ a {
 	.app-menu-links-bottom {
 		a {
 			font-size: $font-size-heading4;
+			padding-left: 20px;
 
 			&:link {
 				font-size: $font-size-heading4;
