--- a/src/components/05-components/screens/login/_index.scss
+++ b/src/components/05-components/screens/login/_index.scss
@@ -1,141 +1,135 @@
 /* Login Screen */
 
-
 @use '~Settings/colors'as *;
 @use '~Settings/fonts'as *;
 
 [id*='Login_Page'] {
-  color: $sapphire-white;
-  z-index: 1;
+	color: $sapphire-white;
+	z-index: 1;
 
-  .login-screen {
-    align-items: center;
-    all: unset;
-    background-color: $regular-alpha;
+	.login-screen {
+		align-items: center;
+		all: unset;
+		background-color: $regular-alpha;
 
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    justify-content: center;
-    /*secondary-color*/
-    overflow: hidden;
+		display: flex;
+		flex-direction: column;
+		height: 100%;
+		justify-content: center;
+		/*secondary-color*/
+		overflow: hidden;
 
-    .section-title {
-      .login-logo {
-        margin: 0 auto;
-        margin-bottom: 20px;
-        width: 110px;
-      }
-    }
+		.section-title {
+			.login-logo {
+				margin: 0 auto;
+				margin-bottom: 20px;
+				width: 110px;
 
-    .section-content {
-      color: $sapphire-white;
-      margin-bottom: 160px;
+				img {
+					filter: brightness(0) invert(1);
+				}
+			}
+		}
 
-      .login-screen__container {
-        margin: 0 auto;
-        width: 70%;
+		.section-content {
+			color: $sapphire-white;
+			margin-bottom: 160px;
 
-        .form-fieldSet {
-          margin: 0;
+			.login-screen__container {
+				margin: 0 auto;
+				width: 70%;
 
-        }
+				.form-fieldSet {
+					margin: 0;
+				}
 
-        input[data-input],
-        input[data-input]:focus,
-        input[data-input]:empty,
-        .animated-label-input input[data-input],
-        .animated-label-input input[data-input]:empty {
-          /*primary-color*/
-          border-bottom: 1px solid $sapphire-white;
-          color: $sapphire-white !important;
-          font-size: $font-size-heading2;
-          padding: 0;
-        }
-      }
+				input[data-input],
+				input[data-input]:focus,
+				input[data-input]:empty,
+				.animated-label-input input[data-input],
+				.animated-label-input input[data-input]:empty {
+					/*primary-color*/
+					border-bottom: 1px solid $sapphire-white;
+					color: $sapphire-white !important;
+					font-size: $font-size-heading2;
+					padding: 0;
+				}
+			}
 
-      .login-actions__container {
-        align-items: center;
-        bottom: 18%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        left: 0;
-        position: absolute;
-        width: 100%;
+			.login-actions__container {
+				align-items: center;
+				bottom: 18%;
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
+				left: 0;
+				position: absolute;
+				width: 100%;
 
-        >div {
-          &:first-child {
-            margin-bottom: 6px;
-          }
+				> div {
+					&:first-child {
+						margin-bottom: 6px;
+					}
 
-          &:nth-child(2) {
-            align-items: center;
-            color: $sapphire-white;
-            display: flex;
-            font-size: $font-size-heading3;
+					&:nth-child(2) {
+						align-items: center;
+						color: $sapphire-white;
+						display: flex;
+						font-size: $font-size-heading3;
 
-            >div:first-child {
-              margin-right: 5px;
-            }
+						> div:first-child {
+							margin-right: 5px;
+						}
+					}
+				}
+			}
 
-          }
-        }
-      }
+			.login-button {
+				bottom: 0;
+				left: 0;
+				padding-bottom: 15px;
+				position: absolute;
+				text-align: center;
 
-      .login-button {
-        bottom: 0;
-        left: 0;
-        padding-bottom: 15px;
-        position: absolute;
-        text-align: center;
+				&:before {
+					background-color: $sapphire-white;
+					border-radius: 100%;
+					content: '';
+					display: block;
+					height: 350%;
+					left: 50%;
+					position: absolute;
+					top: -105%;
+					-webkit-transform: translateX(-50%);
+					transform: translateX(-50%);
+					width: 110%;
+					z-index: 0;
+				}
 
+				> div {
+					color: $dark-grey;
+					margin-top: -15px;
+					position: relative;
+					-webkit-text-fill-color: $dark-grey;
+				}
 
-        &:before {
-          background-color: $sapphire-white;
-          border-radius: 100%;
-          content: "";
-          display: block;
-          height: 350%;
-          left: 50%;
-          position: absolute;
-          top: -105%;
-          -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-          width: 110%;
-          z-index: 0;
-        }
+				a,
+				a:visited,
+				a:link {
+					color: $regular-alpha !important;
+					display: block;
+					margin: 2px auto 0;
+					-webkit-text-fill-color: $regular-alpha;
+				}
+			}
+		}
 
-        >div {
-          color: $dark-grey;
-          margin-top: -15px;
-          position: relative;
-          -webkit-text-fill-color: $dark-grey;
-
-        }
-
-        a,
-        a:visited,
-        a:link {
-          color: $regular-alpha !important;
-          display: block;
-          margin: 2px auto 0;
-          -webkit-text-fill-color: $regular-alpha;
-        }
-      }
-    }
-
-
-
-    .animated-label {
-      &.active {
-        .animated-label-text {
-          color: $regular-white;
-        }
-      }
-    }
-
-  }
-
-
+		.animated-label {
+			&.active {
+				.animated-label-text {
+					color: $regular-white;
+				}
+			}
+		}
+	}
 }
