--- a/src/components/98-adjustments/_home-page.scss
+++ b/src/components/98-adjustments/_home-page.scss
@@ -32,10 +32,10 @@ $marginContainers: 15px;
 
 	.header-title {
 		align-items: flex-end;
+		align-items: center;
 		display: flex;
 		height: 100%;
 		justify-content: center;
-		padding-bottom: 10px;
 
 		.is-loading {
 			> img {
