--- a/src/components/00-settings/_colors.scss
+++ b/src/components/00-settings/_colors.scss
@@ -1,9 +1,9 @@
 // Colors
 
-$regular-alpha: #00a5ea;
+$regular-alpha: #45aaff;
 $regular-beta: darken($regular-alpha, 4%);
 
-$sapphire-care-blue1: #1b3a6a;
+$sapphire-care-blue1: #222a5f;
 
 $dark-blue: #194968;
 $dark-grey: #333333;
