--- a/src/components/05-components/SapphireCare_Patterns/background-green_S/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/background-green_S/_index.scss
@@ -2,22 +2,22 @@
 
 .background-green_S,
 .background-white_S {
-  height: 100%;
-  position: absolute;
-  top: 0;
-  width: 100%;
-  z-index: 0;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	width: 100%;
+	z-index: 0;
 
-  img {
-    height: auto;
-    width: 100%;
-  }
+	img {
+		height: auto;
+		width: 100%;
+	}
 }
 
 .background-green_S {
-  background-color: $regular-alpha;
+	background-color: $sapphire-care-blue1;
 }
 
 .background-white_S {
-  background-color: $sapphire-white;
+	background-color: $sapphire-white;
 }
