--- a/src/components/06-helpers/_validation-colors.scss
+++ b/src/components/06-helpers/_validation-colors.scss
@@ -5,8 +5,10 @@
 .alert-error,
 .alert-warning,
 .alert-info {
-	padding-bottom: 12px;
-	padding-top: 12px;
+	padding-bottom: 15px;
+	padding-left: 35px;
+	padding-right: 15px;
+	padding-top: 15px;
 }
 
 .alert-success {
@@ -27,4 +29,8 @@
 .alert-info {
 	background-color: $regular-blue;
 	border: 0;
+}
+
+.alert-icon {
+	width: 35px;
 }
