--- a/src/components/98-adjustments/_appoitmentRequest-specialties.scss
+++ b/src/components/98-adjustments/_appoitmentRequest-specialties.scss
@@ -1,22 +1,13 @@
 @use '~Settings/colors'as *;
 
-div[data-block*="Specialties.SpecialtiesList"] {
+div[data-block*='Specialties.SpecialtiesList'] {
+	div[data-block='SapphireCare_Patterns.SmallCard'] {
+		> div {
+			border-bottom: none;
+		}
+	}
 
-  div[data-block="SapphireCare_Patterns.SmallCard"] {
-    >div {
-      border-bottom: none;
-    }
-  }
-
-  div[data-block="SapphireCare_Patterns.SmallCard"]+div {
-    all: unset;
-
-    >div {
-      border-radius: 8px;
-      box-shadow: 2px 4px 4px 0px $light-grey;
-      color: $regular-alpha;
-      margin: 0 15px;
-      margin-bottom: 15px;
-    }
-  }
+	div[data-block='SapphireCare_Patterns.SmallCard'] + div {
+		all: unset;
+	}
 }
