--- a/src/components/06-helpers/_break-words.scss
+++ b/src/components/06-helpers/_break-words.scss
@@ -1,4 +1,8 @@
 /* Class created to break word*/
 .breakWords {
-  word-break: break-word;
+	word-break: break-word;
+}
+
+.noWrap {
+	white-space: nowrap;
 }
