--- a/src/components/06-helpers/_index.scss
+++ b/src/components/06-helpers/_index.scss
@@ -3,6 +3,7 @@
 @forward 'border';
 @forward 'break-words';
 @forward 'display';
+@forward 'flex-box';
 @forward 'height';
 @forward 'rotate';
 @forward 'rotate';
