--- a/src/components/05-components/Silk_Blocks/sidebar/_index.scss
+++ b/src/components/05-components/Silk_Blocks/sidebar/_index.scss
@@ -1,5 +1,7 @@
 /* Sidebar */
+@use '~Settings/colors'as *;
+
 .sidebar {
-  -webkit-box-shadow: -1px 0 4px 0 rgba(0, 0, 0, 0.1);
-  box-shadow: -1px 0 4px 0 rgba(0, 0, 0, 0.1);
+	-webkit-box-shadow: -1px 0 4px 0 rgba(0, 0, 0, 0.1);
+	box-shadow: -1px 0 4px 0 rgba(0, 0, 0, 0.1);
 }
